# python-snake-game

./: .gitignore  .pylintrc  Pipfile  README.md  constants.py  data.csv  main.py  pyproject.toml
objects/: block.py  food.py  snake.py  window.py
snake/: constants.py  main.py
snake/objects/: block.py  food.py  snake.py  window.py
