[tool.poetry]
name = "python-snake-game"
version = "0.0.1"
description = "Python snake game"
authors = ["Kushal Bavkar <bavkarkushal@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pygame = "~2.0.0"

[tool.poetry.group.dev.dependencies]
pep8 = "*"
pylint = "*"
autopep8 = "*"
